# backtest-framework

./: .gitignore  Implementation.md  LICENSE  README.md  pyproject.toml
src/vn_backtest/: __init__.py  analysis.py  corporate_actions.py  engine.py  holidays.py  margin.py  optimizer.py  orders.py  reporter.py  strategy.py  trading_rules.py
src/vn_backtest/templates/: backtest_opt_report.html  backtest_report.html  style.css
tests/: test_corporate_actions.py  test_engine.py  test_margin.py  test_trading_rules.py
