[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vn-backtest"
version = "0.1.0"
authors = [
  { name="Hunter Do", email="phongvu2010@gmail.com" },
]

description = "A powerful Backtesting Framework tailored strictly for the Vietnam Stock Market (HOSE, HNX, UPCOM)."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "plotly>=5.10.0",
    "jinja2>=3.1.0"
]

[project.urls]
"Homepage" = "https://github.com/phongvu2010/backtest-framework"
"Bug Tracker" = "https://github.com/phongvu2010/backtest-framework/issues"

[project.optional-dependencies]
optimize = ["optuna"]

[tool.setuptools.package-data]
"vn_backtest" = ["templates/*.html", "templates/*.css"]
